--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -34,7 +34,7 @@
         </div>
         <div>
             <h2>Scenarios</h2>
-            <<ul>
+            <ul>
                 <li>How can I get in touch with the chamber of commerce?</li>
                 <li>What actions can I take to support local businesses?</li>
                 <li>What are some interesting attractions to explore in the area?</li>
@@ -56,7 +56,9 @@
             <h2>Wireframes</h2>
             <figure>
                 <img src="images/wireframe.jpg" alt="wireframe">
-                <figcaption> Wireframe</figcaption>
+                <figcaption> Wireframe deskstop</figcaption> 
+                <img src="images/wireframe1.jpg" alt="wireframe">
+                <figcaption> Wireframe mobile</figcaption>
             </figure>
            
         </div>
