--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -43,20 +43,22 @@
         <div>
             <h2>Color Schema</h2>
             <ul>
-                <li>shade of blue: to be used in the header and footer as background.</li>
-                <li>black: to be used as borders</li>
-                <li>black: to be used for text in the header and footer.</li>
+                <li>Dark blue to be used in the header and footer as background.</li>
+                <li>Light blue to be used as borders</li>
+                <li>Light blue  to be used for text background.</li>
             </ul>
         </div>
         <div>
             <h2>Typography</h2>
-            <p>This site will use the  font-family: "Segoe UI", sans-serif.</p>
+            <p>This site will use the    font-family: 'poppins', verdana, Tahoma;.</p>
         </div>
         <div id="wireframe">
             <h2>Wireframes</h2>
             <figure>
                 <img src="images/wireframe.jpg" alt="wireframe">
-                <figcaption> Wireframe deskstop</figcaption> 
+                <figcaption> Wireframe deskstop</figcaption>  
+            <figure/>     
+            <figure>
                 <img src="images/wireframe1.jpg" alt="wireframe">
                 <figcaption> Wireframe mobile</figcaption>
             </figure>
