--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,10 +32,10 @@
             </button>
             <div class="links">
                 <ul class="nav-list">
-            <a href="index.html">Home</a>
-            <a href="Discover.html">Discover</a>
-            <a href="Directory.html">Directory</a>
-            <a href="join.html">Join us</a>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="discover.html">Discover</a></li>
+                    <li><a href="directory.html">Directory</a></li>
+                    <li><a href="join.html">Join Us</a></li>
         </ul>
     </div>
     <div id="darkModeToggle">🔆</div>
