--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
             <div class="links">
                 <ul class="nav-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="chamber/discover.html">Discover</a></li>
+                    <li><a href="discover.html">Discover</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join Us</a></li>
         </ul>
