--- a/form.html
+++ b/form.html
@@ -76,7 +76,7 @@
     <script src="scripts/getDates.js"></script> 
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/darkmode.js"></script> 
-    
+    <script src="scripts/password.js"></script>
     <script src="scripts/form.js"></script>
 </body>
 </html>
