--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -34,7 +34,7 @@
                 <ul class="nav-list">
             <a href="index.html">Home</a>
             <a href="discover.html">Discover</a>
-            <a href="Directory.html">Directory</a>
+            <a href="directory.html">Directory</a>
             <a href="join.html">Join us</a>
         </ul>
     </div>
