--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -33,8 +33,8 @@
             <div class="links">
                 <ul class="nav-list">
             <a href="index.html">Home</a>
-            <a href="Discover.html">Discover</a>
-            <a href="Directory.html">Directory</a>
+            <a href="discover.html">Discover</a>
+            <a href="directory.html">Directory</a>
             <a href="join.html">Join us</a>
         </ul>
     </div>
