--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is the join page for the marico's Chamber of Commerce website">
+    <meta name="description" content="This is the Member Directory page for the marico's Chamber of Commerce website">
     <meta name="author" content="olusegun famiyesin">
     <title>marico's Chamber of Commerce Page - Member Directory</title>
     <link rel="stylesheet" href="styles/base.css">
