--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             <div class="main_content">
                 <section class="learning_activities">
                     <h2>Learning Activities</h2>
-                    <ul id="links"> </ul>
+                    <ul id="link-list">
+                    </ul>
                     
                 </section>
                 <section class="information">
