--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -47,6 +47,7 @@
         <p>Page Last Visited: <span class="date"></span></p>
     </div>
     
+      
     <main>
         <h1>Member Directory</h1>
         <div id="toggleView">
@@ -56,6 +57,8 @@
         </div>
         <div id="directory"></div>
     </main>
+        <div id="visit-message"></div>
+   
     <footer>
         <p>&copy;<span id="year"></span> olusegun famiyesin</p>
         <p>Contact : info@maricochamber.com </p> 
